packageBuild seems to work when upgrade to jdk 21